--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tea Houses</title>
+    <!-- tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
-
+    <!-- Font awesome -->
+    <script src="https://kit.fontawesome.com/89556ca610.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -107,8 +109,8 @@
         <!-- Great tea start -->
         <section class="mt-32">
 
-            <div class="flex grid grid-cols-1 md:grid-cols-3 gap-x-14 mt-12">
-                <div class="column-3xs gap-5 flex">
+            <div class="flex grid grid-cols-1 md:grid-cols-3 gap-x-14 mt-12 p-4 ">
+                <div class="column-3xs gap-5 flex pb-12">
                     <div>
                         <div class="bg-red-100" style="height: 135px; width: 238px;"></div>
                         <div class="bg-neutral-300 mt-5 ps-12 pt-9" style="height: 355px ; width: 237px;"><img
@@ -125,24 +127,143 @@
 
                 <div>
                     <h1 class="font-semibold text-4xl">Great Tea, Freshly <br> Presented</h1>
-                    <p class="text-slate-600 pt-5	">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan. </p>
+                    <p class="text-slate-600 pt-5	">The meaning of gong cha is chanese is to provide the best tea to
+                        emperor from all possessions . It represents the highest quality and self expectation.
+                        Establishing in 2006, Gong cha had been deeply appreciated by its custoers because of good words
+                        of mouth and unique customized service orginated from Taiwan. </p>
 
                     <h2 class="pt-5 font-semibold">Unique Test</h2>
-                    <p class="text-slate-600 pt-5">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                    <p class="text-slate-600 pt-5">A Unique and different style from other teapots gives a luxurious and
+                        minimalist impression</p>
                     <h2 class="font-semibold pt-5">Premium Quality</h2>
-                    <p class="text-slate-600 pt-5">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                    <p class="text-slate-600 pt-5">A Unique and different style from other teapots gives a luxurious and
+                        minimalist impression</p>
                 </div>
             </div>
 
 
 
         </section>
+        <!-- Client section -->
+        <section class="container mx-auto mt-36 ">
+            <Div class="bg-gradient-to-r from-[#FF8938] to-[#FF0000] flex gap-12 grid-cols-1 md:grid-cols-2">
+                <div class="mt-24 ms-24">
+                    <h1 class="text-white text-2xl font-semibold">Meet Our super <br>Clients </h1>
+                    <p class="text-white pt-5">There are many variations of passages of Lorem Ipsum <br> available, but
+                        the majority have suffered alteration in some form, <br> by injected humour, or randomised words
+                        which don't look even slightly believable.</p>
+                    <button class="text-red-500 bg-white px-5 mt-5 font-semibold">Show All</button>
+                </div>
+                <div class="mt-12 mx-12">
+                    <img src="images/client.png" alt="">
+                    <p class="bg-white p-12 gray-400">We are providing the best and suitable home insurance services for
+                        the people who are interested to treatment</p>
+                    <p class="bg-white p-12 gray-400 mt-12 mb-12">We are providing the best and suitable home insurance
+                        services for the people who are interested to treatment</p>
 
+                </div>
+            </Div>
+        </section class="container mx-auto">
+        <section class="mt-24">
+            <div class="text-center">
+                <h1 class="text-4xl font-semibold pb-5">New & Events</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, <br> by injected humour, or randomised words which don't look even slightly
+                    believable.</p>
+            </div>
+            <!-- New event -->
+            <div>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
+                    <div class="mt-12 rounded-2xl border p-9 m-12 ">
+                        <img src="images/news-1.png" alt="">
+                        <p class="text-slate-500 pt-3">Feb 05,2023</p>
+                        <h1 class="font-bold pt-3">Collecting 8 points for <br>discount </h1>
+                        <p class="text-slate-600 pt-3">There are many variations of passages of <br>Lorenm ipsum
+                            available </p>
+                        <p class="font-semibold pt-3">learn More</p>
+                    </div>
+                    <div class="mt-12 rounded-2xl border p-9 m-12">
+                        <img src="images/news-2.png" alt="">
+                        <p class="text-slate-500 pt-3">Feb 05,2023</p>
+                        <h1 class="font-bold pt-3">Collecting 8 points for <br>discount </h1>
+                        <p class="text-slate-600 pt-3">There are many variations of passages of <br>Lorenm ipsum
+                            available </p>
+                        <p class="font-semibold pt-3">learn More</p>
+                    </div>
+                    <div class="mt-12 rounded-2xl border p-9 m-9">
+                        <img src="images/news-3.png" alt="">
+                        <p class="text-slate-500 pt-3">Feb 05,2023</p>
+                        <h1 class="font-bold pt-3">Collecting 8 points for <br>discount </h1>
+                        <p class="text-slate-600 pt-3">There are many variations of passages of <br>Lorenm ipsum
+                            available </p>
+                        <p class="font-semibold pt-3">learn More</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
 
     </main>
     <footer>
+        <section class="bg-orange-100">
+            <div class="grid grid-cols-1 lg:grid-cols-3 ms-24 pt-12 gap-12">
+                <div><img src="images/bg_cup.png" alt="" style="height: 64px; width: 62px;"></div>
+                <div>
+                    <p>Ready to get started?</p>
+                </div>
+                <div>
+                    <button class="bg-red-500 px-4 text-white rounded font-semibold">Get Started</button>
+                </div>
+            </div>
+            <div class="column-4xs ms-24 flex grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 pt-12">
+                <div>
+                    <p class="text-xl font-semibold">Quick Links</p>
+                    <p class="text-slate-600 pt-3 ">Home</p>
+                    <p class="text-slate-600 pt-3">About us</p>
+                    <p class="text-slate-600 pt-3">Insurance</p>
+                    <p class="text-slate-600 pt-3">Privacy Policy</p>
+                </div>
+                <div>
+                    <p class="text-xl font-semibold">Our service</p>
+                    <p class="text-slate-600 pt-3">life Insurance</p>
+                    <p class="text-slate-600 pt-3">Car Insurance</p>
+                    <p class="text-slate-600 pt-3">Health Insurance</p>
+                    <p class="text-slate-600 pt-3">House Insurance</p>
 
+                </div>
+                <div>
+                    <p class="text-xl font-semibold">Help</p>
+                    <p class="text-slate-600 pt-3">FAQs</p>
+                    <p class="text-slate-600 pt-3">Contact Us</p>
+                </div>
+                <div>
+                    <h1 class="font-semibold text-xl pb-5">Subscribe to our <br>newsletter </h1>
+                    <input type="email" name="email" id="email" placeholder="Email address">
+
+                    <div class="pt-5">
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-twitter ps-5"></i>
+                        <i class="fa-brands fa-instagram ps-5"></i>
+                    </div>
+
+                </div>
+            </div>
+            <div class="mt-12 text-center pb-12">
+                <h1 class="text-slate-600">2023 UI design to-All rights reserved</h1>
+            </div>
+        </section>
     </footer>
 </body>
 
 </html>
+Footer
+© 2023 GitHub, Inc.
+Footer navigation
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pric
+created by Nazmus Jion
